# adventofcode

./: .gitignore  README.md  noxfile.py  pyproject.toml  ruff.toml
.jupyter/config/: jupyter_lab_config.py  migrated
.jupyter/data/: notebook_secret
.jupyter/jupyter_config/: jupyter_lab_config.py  migrated
.jupyter/jupyter_config/lab/workspaces/: default-37a8.jupyterlab-workspace
.jupyter/lab/jupyter-fs/: plugin.jupyterlab-settings
.jupyter/lab/settings/: overrides.json
.virtual_documents/years/2024/day2/: solution.ipynb
aoc-mod/: pyproject.toml
aoc-mod/aoc_mod/: __init__.py
aoc-mod/aoc_mod/utils/file_utils/: __init__.py  methods.py
aoc-mod/aoc_mod/utils/nb_utils/: __init__.py  methods.py
scripts/: run_jupyter_lab.sh
years/2024/: README.md  pyproject.toml
years/2024/_templates/: template_day_README.md  template_solution.ipynb
years/2024/day1/: README.md  instructions.md  solution.ipynb  solutions.json
years/2024/day1/part1/: output.json  part1_solution.ipynb
years/2024/day2/: README.md  solution.ipynb  solutions.json
years/2024/day3/: README.md  solution.ipynb  solutions.json
years/2024/day4/: README.md  solution.ipynb
