[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.2",
]

[tool.uv.workspace]
members = ["years/2024"]
