[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.3",
]

[tool.uv]
dev-dependencies = [
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.2",
]
